# PicasaPy

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  MEMORY.md  PicasaPy-indito.bat  README.md  picasapy  pyproject.toml
.claude/: settings.json
.claude/hooks/: session-start.sh
.github/ISSUE_TEMPLATE/: feladat.md
.github/workflows/: ci.yml  package.yml  release.yml
docs/: integrator-automation.md  reference-repos-audit.md  research-plan.md  research-story.md
docs/benchmarks/: feed-100k-stressz.md  rpi5-image-libs.md  rpi5-sqlite-inotify.md
docs/decisions/: ci-windows-strategy.md  gui-toolkit.md
docs/reviews/: 2026-07-20-code-es-teljesitmeny-review.md
docs/specs/: design-guide.md  feature-map.md  filters-decoded.md  histogram-reference.md  picasa-ini-format.md  pmp-database.md  ux-principles.md
packaging/: .gitignore  README.md  build_deb.sh  build_windows_zip.sh
packaging/debian/: control.template  picasapy.desktop  postinst  postrm
packaging/windows/: README-WINDOWS.template.txt  install.bat.template
scripts/: run_tests.py
src/picasapy/: __init__.py  cvimage.py  ioutil.py  version.py
tests/: test_cvimage.py  test_ioutil.py  test_version.py
tests/app/: conftest.py  qml_video_probe.py  test_application.py  test_controller.py  test_discovery_controller.py  test_drop_import_controller.py  test_edit_controller.py  test_edit_preview.py  test_faces_helper.py  test_feed_stress_100k.py  test_fileops_controller.py  test_folder_tree_controller.py  test_formatting.py  test_histogram_helper.py  test_histogram_reference.py  test_keywords_controller.py  test_main.py  test_models.py  test_provider_placeholder.py  test_qml_busy.py  test_qml_context_menu.py  test_qml_editor_panel.py  test_qml_edits_mark.py  test_qml_feed_virtualization.py  test_qml_fileops_export.py  test_qml_folder_manager.py  test_qml_functional.py  test_qml_hidden.py  test_qml_import_drop_area.py  test_qml_import_panel.py  test_qml_navigation.py  test_qml_perf_panel.py  test_qml_picasa_import.py  test_qml_properties_panel.py  test_qml_quicktags.py  test_qml_slideshow.py  test_qml_splash.py  test_qml_tags_panel.py  test_qml_video.py  test_qml_viewer_properties.py  (+10 more)
tests/dedup/: support_images.py  test_api.py  test_exact.py  test_phash.py  test_similar.py
tests/edit/: test_save.py  test_session.py
tests/export/: test_exporter.py  (+2 more)
tools/: regenerate_icon.py
(+211 files in other folders)
