[project]
name = "picasapy"
version = "0.4.14"
description = "Modern, open, cross-platform successor to Google Picasa"
requires-python = ">=3.12"
license = "GPL-3.0-or-later"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src", "tests"]

[tool.coverage.run]
source = ["src/picasapy"]

[tool.coverage.report]
show_missing = true
